k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serve
  namespace: styrta
  labels:
    app.kubernetes.io/name: serve
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: serve
  ports:
    - name: http
      port: 8088
      targetPort: http
